add google play icon

--- a/index.eu.html
+++ b/index.eu.html
@@ -37,9 +37,7 @@
                 <div class="row">
 
                     <figure class="figure col-lg-3">
-                        <img alt="ideckia logo"
-                            src="src/img/icon/ideckia_opt.svg"
-                            class="figure-img img-fluid rounded">
+                        <img alt="ideckia logo" src="src/img/icon/ideckia_opt.svg" class="figure-img img-fluid rounded">
                     </figure>
 
                     <div class="col-lg-9">
@@ -60,17 +58,15 @@
                                         src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
-                            <!-- <div class="w-50">
-                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                    target="_blank">
-                                    <img class="w-75" alt="Google play link"
-                                        src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/eu_get.svg">
+                            <div class="w-50">
+                                <a href='https://play.google.com/store/apps/details?id=eus.ideckia' target="_blank"><img
+                                        alt='Lortu Google Play dendan' class="w-75"
+                                        src='src/img/badges/google-play-badge-eu.png' />
                                 </a>
                             </div>
-                            <div class="w-50">
-                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                    target="_blank">
-                                    <img class="w-75" alt="F-droid link" src="src/img/badges/f-droid_eu.png">
+                            <!-- <div class="w-50">
+                                <a href="https://f-droid.org/packages/eus.ideckia" target="_blank">
+                                    <img src="src/img/badges/f-droid-badge-eu.png" class="w-75" alt="Get it on F-Droid">
                                 </a>
                             </div> -->
                         </div>
@@ -174,7 +170,8 @@
                             <h5 class="card-title">Elkarrizketa-koadroak</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Ekintzetatik elkarrizketa-koadroak erabil ditzakezu erabiltzaileari informazioa
+                            <p class="card-text">Ekintzetatik elkarrizketa-koadroak erabil ditzakezu erabiltzaileari
+                                informazioa
                                 eskatzeko: testua, pasahitzak, galderak, egun aukeraketa...</p>
                             <a href="https://github.com/ideckia/ideckia_api/blob/develop/api/dialog/IDialog.hx"
                                 target="_blank" class="btn btn-primary">Ekarrizketa-koadroen definizioa</a>
