--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                 <div class="row">
 
                     <figure class="figure col-lg-3">
-                        <img alt="ideckia logo"
-                            src="src/img/icon/ideckia_opt.svg"
-                            class="figure-img img-fluid rounded">
+                        <img alt="ideckia logo" src="src/img/icon/ideckia_opt.svg" class="figure-img img-fluid rounded">
                     </figure>
 
                     <div class="col-lg-9">
@@ -51,24 +49,22 @@
                             automations in gaming, streaming, software development, home...
                         </p>
                         <div class="d-flex">
-                            <div class="w-50"><a
-                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                            <div class="w-50">
+                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
                                     target="_blank">
                                     <img class="w-75" alt="GitHub release link"
                                         src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
-                            <!-- <div class="w-50"><a
-                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                    target="_blank">
-                                    <img class="w-75" alt="Google play link"
-                                        src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/en_get.svg">
-                                </a>
+                            <div class="w-50">
+                                <a href='https://play.google.com/store/apps/details?id=eus.ideckia' target="_blank"><img
+                                        alt='Get it on Google Play' class="w-75"
+                                        src='src/img/badges/google-play-badge-en.png' /></a>
                             </div>
-                            <div class="w-50"><a
-                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                    target="_blank">
-                                    <img class="w-75" alt="F-droid link" src="src/img/badges/f-droid_en.png">
+                            <!-- <div class="w-50">
+                                <a href="https://f-droid.org/packages/eus.ideckia" target="_blank">
+                                    <img src="src/img/badges/f-droid-badge-en-gb.png" class="w-75"
+                                        alt="Get it on F-Droid">
                                 </a>
                             </div> -->
                         </div>
