--- a/index.eu.html
+++ b/index.eu.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="A simple template to mobile landing page">
         <meta name="keywords" content="HTML, CSS, JavaScript">
-        <meta name="author" content="Alexandre Sanlim">
+        <meta name="author" content="Josu Igoa">
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -107,9 +107,9 @@
                             <h5 class="card-title">Aukera amaigabeak</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Komandoak exekutatu, tekla-lasterrak sortu, mikrofonoa mututu, OBS
-                                Studio kontrolatu, ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea zure lana
-                                logeatu, ausazko koloreak sortu...</p>
+                            <p class="card-text">Komandoak exekutatu, idatzi pasahitzak, tekla-lasterrak sortu, mikrofonoa mututu,
+                                OBS Studio kontrolatu, ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea, zure lana
+                                erregistratu, ausazko koloreak sortu...</p>
 
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
                                 target="_blank" class="btn btn-primary">Ekintzen zerrenda</a>
