--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="A simple template to mobile landing page">
         <meta name="keywords" content="HTML, CSS, JavaScript">
-        <meta name="author" content="Alexandre Sanlim">
+        <meta name="author" content="Josu Igoa">
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -105,7 +105,7 @@
                             <h5 class="card-title">Endless possibilities</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Execute commands, create key shortcuts, mute microphone, control OBS
+                            <p class="card-text">Execute commands, write passwords, create key shortcuts, mute microphone, control OBS
                                 Studio, timezones, weather, countdown, timer, log your work, create random colors...</p>
                             <a href="https://github.com/ideckia/ideckia#default-actions" target="_blank"
                                 class="btn btn-primary">Actions list</a>
