--- a/index.eu.html
+++ b/index.eu.html
@@ -226,6 +226,8 @@
             <div class="my-3 p-3 rounded">
                 <h1 class="pb-2 mb-0 text-white">Editorea</h1>
 
+                <h6 class="pb-2 mb-0 text-white">Ez dago zertan Electron aplikazioa astun eta RAM-jale bat deskargatu konfiguraziorako. Editorea zure nabigatzailean bertan dago!</h6>
+
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
                         <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
@@ -242,7 +244,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Forked from <a
+                <p>Web txantiloia honen fork bat da<a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
