--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
             <div class="my-3 p-3 rounded">
                 <h1 class="pb-2 mb-0 text-white">Editor Screenshots</h1>
 
+                <h6 class="pb-2 mb-0 text-white">No need to download a heavy and RAM consuming Electron app to configure your layout. The editor is right in your browser!</h6>
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
                         <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
@@ -235,7 +236,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Forked from <a
+                <p>Web template forked from <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
