--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p class="lead">
                             Ideckia is a system to use your smartphone or tablet as a control panel to send orders to
                             your computer. You can create a customized panel, as many directories and items per
-                            directory as you want to structure your content to fit your needs. You can use it or
+                            directory as you want to structure your content to fit your needs. You can use it for
                             automations in gaming, streaming, software development, home...
                         </p>
                         <div class="d-flex">
