added Mastodon contact footer

--- a/index.eu.html
+++ b/index.eu.html
@@ -85,18 +85,18 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria
-                                (&lt;40MB). Zure SE-arentzat deskarga ezazu:</p>
+                                (&lt;50MB). Zure SE-arentzat deskarga ezazu:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
+                                <img class="w-25" alt="ideckia linux core link" src="src/img/icon/linux.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-win.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia windows server link" src="src/img/icon/windows.svg">
+                                <img class="w-25" alt="ideckia windows core link" src="src/img/icon/windows.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-macos.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia osx server link" src="src/img/icon/osx.svg">
+                                <img class="w-25" alt="ideckia osx core link" src="src/img/icon/osx.svg">
                             </a>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                             <p class="card-text">Ekintzetatik elkarrizketa-koadroak erabil ditzakezu erabiltzaileari
                                 informazioa
                                 eskatzeko: testua, pasahitzak, galderak, egun aukeraketa...</p>
-                            <a href="https://github.com/ideckia/ideckia_api/blob/develop/api/dialog/IDialog.hx"
+                            <a href="https://github.com/ideckia/ideckia_api/blob/main/api/dialog/IDialog.hx"
                                 target="_blank" class="btn btn-primary">Ekarrizketa-koadroen definizioa</a>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                             <h5 class="card-title">Software librea</h5>
                         </div>
                         <div class="card-body">
-                            <p>Software guztiz librea: zerbitzaria, editorea, api-a, ekintzak eta smartphone aplikazioa
+                            <p>Software guztiz librea: aplikazioa bera, editorea, api-a, ekintzak eta smartphone aplikazioa
                                 GPL 2 lizentziapean daude.</p>
                             <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Lortu kodea</a>
                         </div>
@@ -238,6 +238,11 @@
                 </div>
 
             </div>
+
+            <h3 class="text-white mx-auto" style="width: 520px;">
+                Etorri zerbait erratera <a href="https://fosstodon.org/@ideckia"><img alt="ideckia logo"
+                        src="src/img/icon/mastodon.svg" class="figure-img img-fluid rounded"> Mastodonera</a>
+            </h3>
 
         </main>
 
