--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
                             <h5 class="card-title">Cross-platform</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;40MB).
+                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;50MB).
                                 Download here for your OS:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
+                                <img class="w-25" alt="ideckia linux core link" src="src/img/icon/linux.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-win.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia windows server link" src="src/img/icon/windows.svg">
+                                <img class="w-25" alt="ideckia windows core link" src="src/img/icon/windows.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-macos.zip"
                                 target="_blank" class="text-decoration-none">
-                                <img class="w-25" alt="ideckia osx server link" src="src/img/icon/osx.svg">
+                                <img class="w-25" alt="ideckia osx core link" src="src/img/icon/osx.svg">
                             </a>
                         </div>
                     </div>
@@ -105,7 +105,8 @@
                             <h5 class="card-title">Endless possibilities</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Execute commands, write passwords, create key shortcuts, mute microphone, control OBS
+                            <p class="card-text">Execute commands, write passwords, create key shortcuts, mute
+                                microphone, control OBS
                                 Studio, timezones, weather, countdown, timer, log your work, create random colors...</p>
                             <a href="https://github.com/ideckia/ideckia#default-actions" target="_blank"
                                 class="btn btn-primary">Actions list</a>
@@ -165,7 +166,7 @@
                         <div class="card-body">
                             <p class="card-text">You can use dialogs from actions to request user input: text, password,
                                 questions, calendar...</p>
-                            <a href="https://github.com/ideckia/ideckia_api/blob/develop/api/dialog/IDialog.hx"
+                            <a href="https://github.com/ideckia/ideckia_api/blob/main/api/dialog/IDialog.hx"
                                 target="_blank" class="btn btn-primary">Dialogs definition</a>
                         </div>
                     </div>
@@ -176,7 +177,7 @@
                             <h5 class="card-title">Free software</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">The entire stack is free software: server, editor, api, actions and
+                            <p class="card-text">The entire stack is free software: core, editor, api, actions and
                                 smartphone app are licensed by GPL 2.</p>
                             <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Get the
                                 sources</a>
@@ -219,7 +220,8 @@
             <div class="my-3 p-3 rounded">
                 <h1 class="pb-2 mb-0 text-white">Editor Screenshots</h1>
 
-                <h6 class="pb-2 mb-0 text-white">No need to download a heavy and RAM consuming Electron app to configure your layout. The editor is right in your browser!</h6>
+                <h6 class="pb-2 mb-0 text-white">No need to download a heavy and RAM consuming Electron app to configure
+                    your layout. The editor is right in your browser!</h6>
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
                         <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
@@ -230,6 +232,11 @@
                 </div>
 
             </div>
+
+            <h3 class="text-white mx-auto" style="width: 430px;">
+                Say hello to me on <a href="https://fosstodon.org/@ideckia"><img alt="ideckia logo"
+                        src="src/img/icon/mastodon.svg" class="figure-img img-fluid rounded"> Mastodon</a>
+            </h3>
 
         </main>
 
