--- a/index.eu.html
+++ b/index.eu.html
@@ -155,7 +155,7 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Editor integratua</h5>
+                            <h5 class="card-title">Editore integratua</h5>
                         </div>
                         <div class="card-body">
                             <p class="card-text">Internet nabigatzaile bat baldin baduzu, hortxe duzu editorea.
