--- a/index.es.html
+++ b/index.es.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
 
         <title>ideckia</title>
+
     </head>
 
     <body class="bg-light">
@@ -27,9 +28,9 @@
                     Languages
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">English</a></li>
+                    <li><a class="dropdown-item" href="index.html">English</a></li>
                     <li><a class="dropdown-item" href="index.eu.html">Euskara</a></li>
-                    <li><a class="dropdown-item" href="index.es.html">Español</a></li>
+                    <li><a class="dropdown-item" href="#">Español</a></li>
                 </ul>
             </div>
             <div class="d-flex p-3 text-white my-3 rounded">
@@ -44,17 +45,17 @@
 
                         <h1>ideckia</h1>
                         <p class="lead">
-                            <b>ideckia</b> is a system to use your smartphone or tablet as a control panel to send orders to
-                            your computer.
+                            <b>ideckia</b> es un sistema para controlar el ordenador mediante un smartphone o table como
+                            panel de control.
                         </p>
                         <p>
-                            You can create a customized panel, as many directories and items per directory as you want
-                            to structure your content to fit your needs. You can use it for automations in gaming,
-                            streaming, software development, home...
+                            El panel es totalmente configurable, se pueden crear infinidad de directorios y se pueden
+                            poner tantos elementos como se quiera dentro de estos directorios: Se pueden crear
+                            automatizaciones para gaming, streaming, desarrollo de software, el hogar...
                         </p>
                         <div class="d-flex">
-                            <div class="w-50">
-                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                            <div class="w-50"><a
+                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
                                     target="_blank">
                                     <img class="w-75" alt="GitHub release link"
                                         src="src/img/badges/apk-from-github.png">
@@ -62,13 +63,13 @@
                             </div>
                             <div class="w-50">
                                 <a href='https://play.google.com/store/apps/details?id=eus.ideckia' target="_blank"><img
-                                        alt='Get it on Google Play' class="w-75"
-                                        src='src/img/badges/google-play-badge-en.png' /></a>
+                                        alt='Lortu Google Play dendan' class="w-75"
+                                        src='src/img/badges/google-play-badge-eu.png' />
+                                </a>
                             </div>
                             <!-- <div class="w-50">
                                 <a href="https://f-droid.org/packages/eus.ideckia" target="_blank">
-                                    <img src="src/img/badges/f-droid-badge-en-gb.png" class="w-75"
-                                        alt="Get it on F-Droid">
+                                    <img src="src/img/badges/f-droid-badge-eu.png" class="w-75" alt="Get it on F-Droid">
                                 </a>
                             </div> -->
                         </div>
@@ -83,11 +84,11 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Cross-platform</h5>
+                            <h5 class="card-title">Multi plataforma</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;50MB).
-                                Download here for your OS:</p>
+                            <p class="card-text">Funciona en GNU/Linux, Windows y OSX. Totalmente portable
+                                (&lt;50MB). Descárgalo para tu SO:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux core link" src="src/img/icon/linux.svg">
@@ -106,106 +107,108 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Endless possibilities</h5>
+                            <h5 class="card-title">Un montón de posibilidades</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Execute commands, write passwords, create key shortcuts, mute
-                                microphone, control OBS
-                                Studio, timezones, weather, countdown, timer, log your work, create random colors...</p>
-                            <a href="https://github.com/ideckia/ideckia#default-actions" target="_blank"
-                                class="btn btn-primary">Actions list</a>
+                            <p class="card-text">Ejecuta comandos, escribe contraseñas, crea atajos del teclado,
+                                silenciar micro, controla OBS Studio, zonas horarias, tiempo, cuenta atrás,
+                                temporizador, registra tus horas de trabajo, crea colores aleatorios...</p>
+
+                            <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
+                                target="_blank" class="btn btn-primary">Lista de acciones</a>
+
+
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Infinite directories</h5>
+                            <h5 class="card-title">Sin límite de directorios</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">There is no limit for directories. You can create complex panels and
-                                organize them as you want using as many directories as you need.</p>
+                            <p class="card-text">No hay número máximo de directorios. Crea paneles complejos con cuantos
+                                directorios quieras con los elementos que quieras para tenerlo todo bien ordenado.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Multiple states per item, multiple actions per state</h5>
+                            <h5 class="card-title">Múltiples estados por item, múltiples acciones por estado</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Change the state (text, icon...) of the item when clicked. Execute
-                                multiple actions per state.</p>
+                            <p class="card-text">Cambia el estado (texto, icono...) de un item al hacer click. Ejecuta
+                                varias acciones por cada estado del item.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Fixed items</h5>
+                            <h5 class="card-title">Elementos fijos</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Have the necessary items always on hand, even if you explore
-                                different directories.</p>
+                            <p class="card-text">Ten siempre a mano los items necesarios, aunque explores distintos
+                                directorios.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Integrated editor</h5>
+                            <h5 class="card-title">Editor integrado</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">If you have a internet browser, you have the editor right there.
-                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Go to
-                                the editor</a>
+                            <p class="card-text">Si tienes un navegador web, el editor está ahí mismo.
+                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Abrir
+                                editor</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Dialogs</h5>
+                            <h5 class="card-title">Diálogos</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">You can use dialogs from actions to request user input: text, password,
-                                questions, calendar...</p>
+                            <p class="card-text">Puedes usar diálogos desde las acciones para interactuar con el
+                                usuario: textos, passwords, preguntas, calendarios...</p>
                             <a href="https://github.com/ideckia/ideckia_api/blob/main/api/dialog/IDialog.hx"
-                                target="_blank" class="btn btn-primary">Dialogs definition</a>
+                                target="_blank" class="btn btn-primary">Definición de los diálogos</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Free software</h5>
+                            <h5 class="card-title">Software libre</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">The entire stack is free software: core, editor, api, actions and
-                                smartphone app are licensed by GPL 2.</p>
-                            <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Get the
-                                sources</a>
+                            <p>Software totalmente libre: la aplicación, el editor, el API, las acciones y la aplicación
+                                de smartphone está bajo la licencia GPL 2.</p>
+                            <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Ve al
+                                código</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Easy to hack</h5>
+                            <h5 class="card-title">Fácil de hackear</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Replace the existing actions or create your own using plain JavaScript
-                                (using NodeJs). Customize the current editor or create an entire new one that fits your
-                                needs.</p>
+                            <p>Cambia las acciones existentes o crea las tuyas propias usando JavaScript (con NodeJs).
+                                Personaliza el editor o crea uno nuevo para saciar tus necesidades.</p>
                             <a href="https://github.com/ideckia/ideckia#create-your-own-action" target="_blank"
-                                class="btn btn-primary">Create your actions</a>
+                                target="_blank" class="btn btn-primary">Crea tu acción</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="my-3 p-3 rounded">
-                <h1 class="pb-2 mb-0 text-white">App Screenshots</h1>
+                <h1 class="pb-2 mb-0 text-white">Aplicación</h1>
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
@@ -222,10 +225,11 @@
             </div>
 
             <div class="my-3 p-3 rounded">
-                <h1 class="pb-2 mb-0 text-white">Editor Screenshots</h1>
+                <h1 class="pb-2 mb-0 text-white">Editor</h1>
 
-                <h6 class="pb-2 mb-0 text-white">No need to download a heavy and RAM consuming Electron app to configure
-                    your layout. The editor is right in your browser!</h6>
+                <h6 class="pb-2 mb-0 text-white">No tienes que descargar una aplicación Electron pesada y hambrienta de
+                    RAM para configurar ideckia. El editor está en tu navegador!</h6>
+
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
                         <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
@@ -237,8 +241,8 @@
 
             </div>
 
-            <h3 class="text-white mx-auto" style="width: 430px;">
-                Say hello to me on <a href="https://fosstodon.org/@ideckia"><img alt="ideckia logo"
+            <h3 class="text-white mx-auto" style="width: 520px;">
+                Dime algo en <a href="https://fosstodon.org/@ideckia"><img alt="ideckia logo"
                         src="src/img/icon/mastodon.svg" class="figure-img img-fluid rounded"> Mastodon</a>
             </h3>
 
@@ -247,7 +251,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Web template forked from <a
+                <p>La plantilla web es un fork de <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
