--- a/index.eu.html
+++ b/index.eu.html
@@ -30,6 +30,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="index.html">English</a></li>
                     <li><a class="dropdown-item" href="#">Euskara</a></li>
+                    <li><a class="dropdown-item" href="index.es.html">Español</a></li>
                 </ul>
             </div>
             <div class="d-flex p-3 text-white my-3 rounded">
@@ -45,7 +46,10 @@
                         <h1>ideckia</h1>
                         <p class="lead">
                             Smartphonea edo tableta aginte panel moduan erabiliz, ordenagailua kontrolatzeko sistema da
-                            ideckia. Panela guztiz pertsonalizagarria da, nahi adina karpeta sortu daitezke eta karpeta
+                            <b>ideckia</b>.
+                        </p>
+                        <p>
+                            Panela guztiz pertsonalizagarria da, nahi adina karpeta sortu daitezke eta karpeta
                             bakoitzean nahi adina elementu jarri daitezke zure edukia antolatuta edukitzeko.
                             Jokogintzarako, streaming-erako, software garapenerako, etxeko eta hainbat modutako
                             automatizazioetarako erabili daiteke.
@@ -107,8 +111,10 @@
                             <h5 class="card-title">Aukera amaigabeak</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Komandoak exekutatu, idatzi pasahitzak, tekla-lasterrak sortu, mikrofonoa mututu,
-                                OBS Studio kontrolatu, ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea, zure lana
+                            <p class="card-text">Komandoak exekutatu, idatzi pasahitzak, tekla-lasterrak sortu,
+                                mikrofonoa mututu,
+                                OBS Studio kontrolatu, ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea, zure
+                                lana
                                 erregistratu, ausazko koloreak sortu...</p>
 
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
@@ -133,7 +139,7 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Egoera anitzeko elementuak, ekintza anitzeko egoerak.</h5>
+                            <h5 class="card-title">Egoera anitzeko elementuak, ekintza anitzeko egoerak</h5>
                         </div>
                         <div class="card-body">
                             <p class="card-text">Aldatu item-aren egoera (testua, ikonoa...) klik egitean. Exekutatu
@@ -159,8 +165,8 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">Internet nabigatzaile bat baldin baduzu, hortxe duzu editorea.
-                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Editorera
-                                joan</a>
+                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Ireki
+                                editorea</a>
                         </div>
                     </div>
                 </div>
@@ -171,8 +177,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">Ekintzetatik elkarrizketa-koadroak erabil ditzakezu erabiltzaileari
-                                informazioa
-                                eskatzeko: testua, pasahitzak, galderak, egun aukeraketa...</p>
+                                informazioa eskatzeko: testua, pasahitzak, galderak, egun aukeraketa...</p>
                             <a href="https://github.com/ideckia/ideckia_api/blob/main/api/dialog/IDialog.hx"
                                 target="_blank" class="btn btn-primary">Ekarrizketa-koadroen definizioa</a>
                         </div>
@@ -184,8 +189,8 @@
                             <h5 class="card-title">Software librea</h5>
                         </div>
                         <div class="card-body">
-                            <p>Software guztiz librea: aplikazioa bera, editorea, api-a, ekintzak eta smartphone aplikazioa
-                                GPL 2 lizentziapean daude.</p>
+                            <p>Software guztiz librea: aplikazioa bera, editorea, API-a, ekintzak eta smartphone
+                                aplikazioa GPL 2 lizentziapean daude.</p>
                             <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Lortu kodea</a>
                         </div>
                     </div>
@@ -226,7 +231,8 @@
             <div class="my-3 p-3 rounded">
                 <h1 class="pb-2 mb-0 text-white">Editorea</h1>
 
-                <h6 class="pb-2 mb-0 text-white">Ez dago zertan Electron aplikazioa astun eta RAM-jale bat deskargatu konfiguraziorako. Editorea zure nabigatzailean bertan dago!</h6>
+                <h6 class="pb-2 mb-0 text-white">Ez dago zertan Electron aplikazioa astun eta RAM-jale bat deskargatu
+                    konfiguraziorako. Editorea zure nabigatzailean bertan dago!</h6>
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
@@ -249,7 +255,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Web txantiloia honen fork bat da<a
+                <p>Web txantiloia honen fork bat da <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
