--- a/index.es.html
+++ b/index.es.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">Ejecuta comandos, escribe contraseñas, crea atajos del teclado,
-                                silenciar micro, controla OBS Studio, zonas horarias, tiempo, cuenta atrás,
+                                silencia micro, controla OBS Studio, zonas horarias, tiempo, cuenta atrás,
                                 temporizador, registra tus horas de trabajo, crea colores aleatorios...</p>
 
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
