Google Playko lotura kendu

--- a/index.eu.html
+++ b/index.eu.html
@@ -62,13 +62,13 @@
                                         src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
+                            <!-- 
                             <div class="w-50">
                                 <a href='https://play.google.com/store/apps/details?id=eus.ideckia' target="_blank"><img
                                         alt='Lortu Google Play dendan' class="w-75"
                                         src='src/img/badges/google-play-badge-eu.png' />
                                 </a>
-                            </div>
-                            <!-- <div class="w-50">
+                            </div><div class="w-50">
                                 <a href="https://f-droid.org/packages/eus.ideckia" target="_blank">
                                     <img src="src/img/badges/f-droid-badge-eu.png" class="w-75" alt="Get it on F-Droid">
                                 </a>
