--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                                         src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
+                            <!-- 
                             <div class="w-50">
                                 <a href='https://play.google.com/store/apps/details?id=eus.ideckia' target="_blank"><img
                                         alt='Get it on Google Play' class="w-75"
                                         src='src/img/badges/google-play-badge-en.png' /></a>
-                            </div>
-                            <!-- <div class="w-50">
+                            </div><div class="w-50">
                                 <a href="https://f-droid.org/packages/eus.ideckia" target="_blank">
                                     <img src="src/img/badges/f-droid-badge-en-gb.png" class="w-75"
                                         alt="Get it on F-Droid">
