--- a/index.eu.html
+++ b/index.eu.html
@@ -49,7 +49,7 @@
                             <b>ideckia</b>.
                         </p>
                         <p>
-                            Panela guztiz pertsonalizagarria da, nahi adina karpeta sortu daitezke eta karpeta
+                            Panela guztiz pertsonalizagarria da, nahi adina direktorio sortu daitezke eta direktorio
                             bakoitzean nahi adina elementu jarri daitezke zure edukia antolatuta edukitzeko.
                             Jokogintzarako, streaming-erako, software garapenerako, etxeko eta hainbat modutako
                             automatizazioetarako erabili daiteke.
@@ -201,7 +201,7 @@
                             <h5 class="card-title">Hackeatzeko erraza</h5>
                         </div>
                         <div class="card-body">
-                            <p>Lehendik dauden ekintzak edo berriak sor ditzakezu JavaScript arruntarekin (NodeJs
+                            <p>Aldatu lehendik dauden ekintzak edo berriak sor ditzakezu JavaScript arruntarekin (NodeJs
                                 erabiliz). Aldatu uneko editorea edo zure propioa hutsetik sortu, zure beharretara
                                 egokituz.</p>
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#zure-ekintza-propioa-sortzen"
